---------------------------------------------------------------------------------------------------
Version: 2.6.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.6.0
Date: 2025-09-16
  Features:
    - Added support for item requests! Bot item requests for an entity will be saved (even if it's not a ghost), and show up in blueprints.
    - Updating item requests only affects the current stage, unlike other settings.
    - Modules are still staged (even though they are technically item requests).
---------------------------------------------------------------------------------------------------
Version: 2.5.2
Date: 2025-09-07
  Bugfixes:
    - Fixed several issues related to blueprint icon settings.
    - This may also fix crashes when creating a new stage, on a project created in an earlier version.
---------------------------------------------------------------------------------------------------
Version: 2.5.1
Date: 2025-09-02
  Bugfixes:
    - Fixed problem with entity rotation in blueprint book import, in some rare cases.
---------------------------------------------------------------------------------------------------
Version: 2.5.0
Date: 2025-09-02
  Features:
    - Added ability to import/export an entire project to a shareable string!
    - Added ability to import a project from a blueprint book (string), with a few caveats: requires the book to have snap-to-grid enabled on all blueprints.
   Changes:
    - Removed the "teleport on gps tag" feature. This is obsoleted by Editor setting "Move player to editor location on exit".
---------------------------------------------------------------------------------------------------
Version: 2.4.1
Date: 2025-08-13
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.4.0
Date: 2025-08-13
  Features:
    - Added support for editing blueprint descriptions.