@@ -14,6 +14,7 @@ import { Entity } from "../../entity/Entity"
 import { addWireConnection, newProjectEntity } from "../../entity/ProjectEntity"
 import { exportProject, importProjectDataOnly, ProjectExport } from "../../import-export/project"
 import { _deleteAllProjects, createUserProject } from "../../project/UserProject"
+import { simpleInsertPlan } from "../entity/entity-util"
 
 after_each(() => {
   _deleteAllProjects()
@@ -58,6 +59,13 @@ function createSampleProject() {
     fromId,
     toId,
   })
+
+  // Add unstaged values for testing
+  const unstagedValue1 = { items: [simpleInsertPlan(defines.inventory.chest, "iron-ore", 0, 10)] }
+  const unstagedValue2 = { items: [simpleInsertPlan(defines.inventory.chest, "copper-plate", 1, 25)] }
+  entity1.setUnstagedValue(2, unstagedValue1)
+  entity2.setUnstagedValue(1, unstagedValue2)
+
   return project
 }
 
@@ -94,6 +102,9 @@ test("Basic export test", () => {
         firstStage: 2,
         lastStage: nil,
         wires: [[1, fromId, 2, toId]],
+        unstagedValue: {
+          2: { items: [simpleInsertPlan(defines.inventory.chest, "iron-ore", 0, 10)] },
+        },
       },
       {
         entityNumber: 2,
@@ -104,6 +115,9 @@ test("Basic export test", () => {
         firstStage: 1,
         lastStage: nil,
         wires: [[2, toId, 1, fromId]],
+        unstagedValue: {
+          1: { items: [simpleInsertPlan(defines.inventory.chest, "copper-plate", 1, 25)] },
+        },
       },
     ],
   } satisfies ProjectExport)
@@ -114,4 +128,34 @@ test("Round trip export test", () => {
   const result = exportProject(project)
   const roundTrip = exportProject(importProjectDataOnly(result))
   expect(roundTrip).toEqual(result)
+})
+
+test("Unstaged values are preserved in round trip", () => {
+  const project = createSampleProject()
+
+  // Find entities and verify unstaged values were set
+  const entities = [...project.content.allEntities()]
+  expect(entities).toHaveLength(2)
+
+  const entity1 = entities.find((e) => e.firstValue.name == "foo")!
+  const entity2 = entities.find((e) => e.firstValue.name == "baz")!
+
+  expect(entity1.getUnstagedValue(2)).toEqual({ items: [simpleInsertPlan(defines.inventory.chest, "iron-ore", 0, 10)] })
+  expect(entity2.getUnstagedValue(1)).toEqual({
+    items: [simpleInsertPlan(defines.inventory.chest, "copper-plate", 1, 25)],
+  })
+
+  const exported = exportProject(project)
+  const imported = importProjectDataOnly(exported)
+
+  const importedEntities = [...imported.content.allEntities()]
+  const importedEntity1 = importedEntities.find((e) => e.firstValue.name == "foo")!
+  const importedEntity2 = importedEntities.find((e) => e.firstValue.name == "baz")!
+
+  expect(importedEntity1.getUnstagedValue(2)).toEqual({
+    items: [simpleInsertPlan(defines.inventory.chest, "iron-ore", 0, 10)],
+  })
+  expect(importedEntity2.getUnstagedValue(1)).toEqual({
+    items: [simpleInsertPlan(defines.inventory.chest, "copper-plate", 1, 25)],
+  })
 })
