@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.6.1
 Date: ????
-  Changes:
+  Features:
+    - Added import/export support for item requests
 ---------------------------------------------------------------------------------------------------
 Version: 2.6.0
 Date: 2025-09-16
